crates/check_js_type_info/tests/snapshots/infer_flattened_type_from_double_chained_invocation_of_promise_returning_function.snap
---
source: crates/check_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
function returnsPromise(): Promise<number> {
	return Promise.resolved(true);
}

returnsPromise()
	.then(() => {})
	.finally(() => {});

```

## Result

```
instanceof Promise
```

## Registered types

```
Thin TypeId(0) => sync Function "returnsPromise" {
  accepts: {
    params: []
    type_args: []
  }
  returns: Global TypeId(0)
}

Thin TypeId(1) => instanceof Promise<number>

Thin TypeId(2) => Promise.prototype.then

Thin TypeId(3) => void

Thin TypeId(4) => sync Function {
  accepts: {
    params: []
    type_args: []
  }
  returns: Module(0) TypeId(3)
}

Thin TypeId(5) => instanceof Promise

Thin TypeId(6) => Promise.prototype.finally

Global TypeId(0) => instanceof Promise<number>

Global TypeId(1) => instanceof Promise<number>
```
