crates/check_js_type_info/tests/snapshots/infer_flattened_type_from_static_promise_function.snap
---
source: crates/check_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
Promise.resolve("value");

```

## Result

```
instanceof Promise
```

## Registered types

```
Global TypeId(0) => Promise.resolve

Global TypeId(1) => value: value
```
