crates/check_js_type_info/tests/snapshots/infer_flattened_type_of_async_function.snap
---
source: crates/check_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
async function returnsPromise(): Promise<string> {
	return "value";
}

```

## Result

```
async Function "returnsPromise" {
  accepts: {
    params: []
    type_args: []
  }
  returns: Global TypeId(0)
}
```

## Registered types

```
Global TypeId(0) => instanceof unresolved reference "Promise"<string> (scope ID: 0)
```
