crates/check_js_type_info/tests/snapshots/infer_flattened_type_of_typeof_expression.snap
---
source: crates/check_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
const foo = "foo";

typeof foo;

```

## Result

```
"string"
```

## Registered types

```
Thin TypeId(0) => value: foo

Global TypeId(0) => value: foo
```
